# nickel

./: Cargo.toml  RELEASES.md  flake.nix
.github/: settings.yml
.github/workflows/: benchmark-master.yaml  benchmark-pr.yaml  continuous-integration.yml  release-artifacts.yaml  release-python.yml  update-flake-lock.yml  upload-pr-benchmarks.yaml
cli/: Cargo.toml
cli/src/: cli.rs  convert.rs  doctest.rs  export.rs  format.rs  global.rs  input.rs  repl.rs
cli/src/customize/: mod.rs
cli/tests/integration/: stdin_format.rs
cli/tests/snapshot/: main.rs
cli/tests/snapshot/inputs/customize-mode/: closurization.ncl
cli/tests/snapshot/inputs/errors/: fail_with.ncl
cli/tests/snapshot/inputs/export/: yaml.ncl
cli/tests/snapshot/inputs/query/: query_yaml.ncl
cli/tests/snapshot/snapshots/: snapshot__convert_stdout_json.json.snap  snapshot__convert_stdout_toml.toml.snap  snapshot__convert_stdout_yaml.yaml.snap  snapshot__eval_stderr_array_range_reversed_indices.ncl.snap  snapshot__eval_stderr_array_range_step_negative_step.ncl.snap  snapshot__eval_stderr_base64_decode_invalid_encoding.ncl.snap  snapshot__eval_stderr_base64_decode_non_string.ncl.snap  snapshot__eval_stderr_fail_with.ncl.snap  snapshot__eval_stderr_subcontract_nested_custom_diagnostics.ncl.snap  snapshot__export_stdout_yaml.ncl.snap  snapshot__package_stderr_invalid-git-dep.ncl.snap  snapshot__package_stderr_invalid-version.ncl.snap  snapshot__package_stderr_missing-field.ncl.snap  snapshot__query_stdout_query_yaml.ncl.snap
core/: Cargo.toml
core/src/: cache.rs  closurize.rs  deserialize.rs  package.rs  position.rs  pretty.rs  program.rs  typ.rs
core/src/error/: mod.rs  warning.rs
core/src/eval/: merge.rs  mod.rs  operation.rs  semantic_hash.rs  stack.rs  tests.rs
core/src/eval/cache/: incremental_ng.rs  lazy.rs  mod.rs
core/src/eval/value/: mod.rs
core/src/repl/: query_print.rs
core/src/serialize/: mod.rs
core/src/term/: mod.rs  record.rs  string.rs
core/src/term/make/: builder.rs
core/src/term/pattern/: compile.rs
core/src/typecheck/: error.rs  mod.rs  unif.rs
core/stdlib/: internals.ncl  std.ncl
core/tests/examples/: main.rs
core/tests/integration/: main.rs  program_api.rs  query.rs
core/tests/integration/inputs/core/: arrays.ncl
core/tests/integration/inputs/pattern-matching/: basics.ncl
core/tests/integration/inputs/stdlib/: string_find.ncl
doc/manual/: cli.md  syntax.md
examples/imports/: data_nickel_properties.ncl
git/src/: lib.rs
lsp/: README.md
lsp/lsp-harness/src/: jsonrpc.rs  lib.rs
lsp/nls/src/: analysis.rs  background.rs  command.rs  contracts.rs  field_walker.rs  files.rs  main.rs  server.rs  task_queue.rs  usage.rs  world.rs
lsp/nls/src/requests/: completion.rs
lsp/nls/tests/: main.rs
lsp/nls/tests/inputs/: completion-typecheck-error.ncl
lsp/nls/tests/snapshots/: main__lsp__nls__tests__inputs__completion-typecheck-error.ncl.snap
lsp/vscode-extension/: README.md  package.json
nickel/: Cargo.toml
nickel/src/: capi.rs  lib.rs
notes/: fixing-sealing-and-recursive-records.md
package/: Cargo.toml
package/src/: error.rs  lib.rs  lock.rs  manifest.rs
package/tests/: integration.rs
parser/: Cargo.toml  build.rs
parser/src/: combine.rs  error.rs  files.rs  grammar.lalrpop  lexer.rs  tests.rs  typ.rs  uniterm.rs  utils.rs
parser/src/ast/: alloc.rs  mod.rs  pretty.rs  primop.rs
parser/src/ast/pattern/: mod.rs
py-nickel/src/: lib.rs
rfcs/: 007-bytecode-interpreter.md
scripts/: release.sh
src/: error.rs  grammar.lalrpop  label.rs  main.rs  operation.rs  term.rs  typecheck.rs  types.rs
src/parser/: lexer-logos.rs  lexer.rs  lexer_logos.rs  mod.rs  tests.rs
stdlib/: contracts.ncl
utils/src/: bench.rs  test_program.rs
vector/src/: vector.rs
wasm-repl/: Cargo.toml
