[workspace]
members = [
    "cli",
    "core",
    "flock",
    "fmt",
    "git",
    "lsp/lsp-harness",
    "lsp/nls",
    "nickel",
    "package",
    "parser",
    "py-nickel",
    "utils",
    "vector",
    "wasm-repl",
]
resolver = "2"

[workspace.package]
version = "1.16.0"
authors = ["The Nickel Team <nickel-lang@protonmail.com>"]
license = "MIT"
edition = "2024"
rust-version = "1.89"
keywords = ["configuration", "language", "nix", "nickel"]
repository = "https://github.com/tweag/nickel"
homepage = "https://nickel-lang.org"
readme = "README.md"

[workspace.dependencies]
nickel-lang-core = { version = "0.17.0", path = "./core", default-features = false }
nickel-lang-flock = { version = "0.1.0", path = "./flock" }
nickel-lang-git = { version = "0.2.1", path = "./git" }
nickel-lang-package = { version = "0.6.0", path = "./package" }
nickel-lang-parser = { version = "0.2.0", path = "./parser" }
nickel-lang-vector = { version = "0.1.0", path = "./vector" }
nickel-lang-utils = { version = "0.1.0", path = "./utils" }
lsp-harness = { version = "0.1.0", path = "./lsp/lsp-harness" }

# The nix flake pulls in wasm-bindgen tooling based on the version in Cargo.lock,
# and it needs to know a hash. This means that if Cargo.lock gets updated, the
# nix build will fail until you update flake.nix with the new hashes.
#
# We used to pin the verson here with `=` to prevent the nix build from breaking,
# but that was annoying for people consuming nickel as a rust crate; they shouldn't
# have to care about our nix build.
wasm-bindgen = "0.2.100"

anstyle = "1"
anyhow = "1"
assert_cmd = "2"
assert_matches = "1"
base64 = "0.22"
bincode = "2"
clap = "4"
clap_complete = "4"
codespan = { version = "0.13", features = ["serialization"] }
codespan-reporting = { version = "0.13", features = ["serialization"] }
colorchoice = "1"
comrak = "0.52"
criterion = "0.5"
crossbeam = "0.8"
csv = "1"
cxx = "1"
cxx-build = "1"
directories = "6"
env_logger = "0.11"
git-version = "0.3"
gix = "0.84"
gix-hash = "0.25"
glob = "0.3"
indexmap = "2"
indoc = "2"
insta = "1"
js-sys = "0.3.77"
json_scanner = "0.1"
lalrpop = "0.23"
lalrpop-util = "0.23"
lazy_static = "1"
libc = "0.2"
libtest-mimic = "0.8"
log = "0.4"
logos = "0.16"
lsp-server = "0.7"
lsp-types = "0.95"
malachite = "0.9"
malachite-q = "0.9"
md-5 = "0.11"
notify = "8"
notify-debouncer-full = "0.7"
once_cell = "1"
ouroboros = "0.18"
pprof = "0.15"
pkg-config = "0.3"
pretty = "0.12"
pretty_assertions = "1"
pubgrub = "0.3"
pyo3 = "0.29"
pyo3-build-config = "0.28"
regex = "1"
rustyline = "18"
rustyline-derive = "0.12"
saphyr-parser = "0.0.6"
scopeguard = "1"
serde = "1"
serde_json = "1"
serde_repr = "0.1"
serde-wasm-bindgen = "0.6"
serde_with = { version = "3", default-features = false, features = ["macros"] }
serde_yaml = "0.9"
sha1 = "0.11"
sha2 = "0.11"
similar = "3"
simple-counter = "0.1"
smallvec = "1"
strip-ansi-escapes = "0.2"
termimad = "0.34"
test-generator = "0.3"
thiserror = "2"
toml = "1"
toml_edit = "0.25"
typed-arena = "2"
unicode-segmentation = "1"
bumpalo = "3"
windows-sys = "0.61"

metrics = "0.24"
metrics-util = "0.20"

topiary-core = "0.7"
topiary-queries = { version = "0.7", default-features = false, features = ["nickel"] }
tree-sitter-nickel = "0.5"
tempfile = "3"

strsim = "0.11"
semver = { version = "1", features = ["serde"] }

arbitrary = { version = "1", features = ["derive"] }
arbtest = "0.3"
rpds = "1"
imbl-sized-chunks = "0.1"

paste = "1"

[profile.dev.package.lalrpop]
opt-level = 3

[profile.release.package.lalrpop]
opt-level = 3

[profile.release]
lto = "fat"
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true

# https://github.com/crate-ci/typos/blob/master/docs/reference.md
[workspace.metadata.typos.default]
extend-ignore-re = [
    "\\d\\w{4,}\\d",
]
extend-ignore-words-re = [
    '^[a-zA-Z]{1,3}$' # ignore words up to length 3
]

[workspace.metadata.typos.default.extend-words]
# closure shorthand
clos = "clos"
# field shorthand
fiel = "fiel"
Shepard = "Shepard"
unparseable = "unparseable"
# var n
varn = "varn"
